--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
-kafka.props.bootstrap.servers=localhost:9092
-kafka.props.group.id=test
-kafka.props.enable.auto.commit=true
-kafka.props.auto.commit.interval.ms=1000
-kafka.props.session.timeout.ms=30000
-kafka.props.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-kafka.props.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#############################################################################################
+#
+#   KAFKA PROPERTIES
+#
+#############################################################################################
+cons.kafka-props.bootstrap.servers=localhost:9092
+cons.kafka-props.group.id=test
+cons.kafka-props.enable.auto.commit=true
+cons.kafka-props.auto.commit.interval.ms=1000
+cons.kafka-props.session.timeout.ms=30000
+cons.kafka-props.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+cons.kafka-props.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+#############################################################################################
+#
+#   ZOOKEEPER PROPERTIES
+#
+#############################################################################################
+cons.zk-props.hosts=localhost:2181
+cons.zk-props.path=/node/node
