--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #############################################################################################
 #
-#   KAFKA PROPERTIES
+#   KAFKA CONNECTION PROPERTIES
 #
 #############################################################################################
 cons.kafka-props.bootstrap.servers=localhost:9092
@@ -13,8 +13,15 @@ cons.kafka-props.value.deserializer=org.apache.kafka.common.serialization.String
 
 #############################################################################################
 #
-#   ZOOKEEPER PROPERTIES
+#   ZOOKEEPER CONNECTION PROPERTIES
 #
 #############################################################################################
 cons.zk-props.hosts=localhost:2181
 cons.zk-props.path=/node/node
+
+#############################################################################################
+#
+#   CONSUMER PROPERTIES
+#
+#############################################################################################
+cons.topic=kafka-topic-name
