handler service factory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,10 @@ cons.zk-props.path=/node/node
 #
 #############################################################################################
 cons.topic=kafka-topic-name
+
+#############################################################################################
+#
+#   SERVICE ID
+#
+#############################################################################################
+cons.service-id=handler
