--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ cons.kafka-props.value.deserializer=org.apache.kafka.common.serialization.String
 #   ZOOKEEPER CONNECTION PROPERTIES
 #
 #############################################################################################
-cons.zk-props.hosts=localhost:2181
-cons.zk-props.path=/node/node
+handler.zk-props.hosts=localhost:2181
+handler.zk-props.path=/node/node
 
 #############################################################################################
 #
@@ -31,4 +31,4 @@ cons.topic=kafka-topic-name
 #   SERVICE ID
 #
 #############################################################################################
-cons.service-id=handler
+handler.service-id=handler
