--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ cons.kafka-props.value.deserializer=org.apache.kafka.common.serialization.String
 #   ZOOKEEPER CONNECTION PROPERTIES
 #
 #############################################################################################
-handler.zk-props.hosts=localhost:2181
-handler.zk-props.path=/node/node
+handler.hosts=localhost:2181
+handler.path=/node/node
 
 #############################################################################################
 #
